--- a/src/SPIN.Devices.Abstractions/SPIN.Devices.Abstractions.csproj
+++ b/src/SPIN.Devices.Abstractions/SPIN.Devices.Abstractions.csproj
@@ -12,4 +12,8 @@
     <Company>SPIN - Space Innovation</Company>
     <RepositoryUrl>https://github.com/SPIN-Space-Innovation/SPIN.Devices.Abstractions</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="UnitsNet" Version="5.31.0" />
+  </ItemGroup>
 </Project>
